force-app/main/default/objects/Invoice__c/fields/ApplyLateFee__c.field-meta.xml
<CustomField>
    <fullName>ApplyLateFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box for applying the late fee</description>
    <inlineHelpText>Check this check box for applying the late fee</inlineHelpText>
    <label>Apply Late Fee</label>
    <type>Checkbox</type>
</CustomField>