force-app/main/default/objects/Invoice__c/fields/AR_Type__c.field-meta.xml
<CustomField>
    <fullName>AR_Type__c</fullName>
    <label>AR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell Quote</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>