force-app/main/default/objects/Invoice__c/fields/Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Biller_Name__c</fullName>
    <formula>$User.LastName + &quot;, &quot; + $User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biller Name</label>
    <type>Text</type>
</CustomField>