force-app/main/default/objects/Invoice__c/fields/Collections_Status__c.field-meta.xml
<CustomField>
    <fullName>Collections_Status__c</fullName>
    <inlineHelpText>Auto updated based on payment received and due dates.</inlineHelpText>
    <label>Collections Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Not Collectable</fullName>
            </value>
            <value>
                <fullName>Brand Collections</fullName>
            </value>
            <value>
                <fullName>Charge-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>