force-app/main/default/objects/Invoice__c/fields/Cultivation_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Balance__c</fullName>
    <formula>IF( Total_Cultivation_Tax_Payments_Received__c &gt; Total_Cultivation_Tax__c, 0, Total_Cultivation_Tax__c - Total_Cultivation_Tax_Payments_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cultivation Tax Balance_del</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>