force-app/main/default/objects/Invoice__c/fields/Distributor_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Type__c</fullName>
    <formula>TEXT(Distributor_License__r.License_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor License Type</label>
    <type>Text</type>
</CustomField>