force-app/main/default/objects/Invoice__c/fields/Excise_Tax_Balance__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Balance__c</fullName>
    <description>IF( Total_Payments_Received__c &gt; Total_Excise_Tax_Amount__c, 0, Total_Excise_Tax_Amount__c - Total_Payments_Received__c)</description>
    <formula>IF( Total_Excise_Tax_Payments_Received__c &gt; Total_Excise_Tax_Amount__c, 0, Total_Excise_Tax_Amount__c - Total_Excise_Tax_Payments_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excise Tax Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>