force-app/main/default/objects/Invoice__c/fields/Excise_Tax_Offset__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, this invoice has an Excise Tax Deposit account to offset excise tax liability. Uncheck if offset is netted with Excise Tax Deposit account</inlineHelpText>
    <label>Excise Tax Offset</label>
    <type>Checkbox</type>
</CustomField>