force-app/main/default/objects/Invoice__c/fields/Factored_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Factored_Payable_Amount__c</fullName>
    <formula>IF(Factoring_Discount__c = 0,Null, Total_Invoice_Amount__c -  Factoring_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factored Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>