force-app/main/default/objects/Invoice__c/fields/Factoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Factoring Contact</relationshipLabel>
    <relationshipName>Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>