force-app/main/default/objects/Invoice__c/fields/FG_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>FG_Opportunity_Name__c</fullName>
    <formula>Opportunity_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG Opportunity Name</label>
    <type>Text</type>
</CustomField>