force-app/main/default/objects/Invoice__c/fields/Invoice_Aged__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Aged__c</fullName>
    <formula>IF(ISPICKVAL(Collections_Status__c,&apos;Past Due&apos;), today() - Invoice_Due_Date__c ,
IF(ISPICKVAL(Collections_Status__c,&apos;Paid in Full&apos;), Last_Payment_Date__c - Invoice_Due_Date__c ,
IF(ISPICKVAL(Collections_Status__c,&apos;Pending&apos;), today() - Invoice_Due_Date__c , Null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This fields displays how many days retailer payment is past due.</inlineHelpText>
    <label>Invoice Aged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>