force-app/main/default/objects/Invoice__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Tax&quot;,Total_Cultivation_Tax__c -  Total_Payments_Received__c, Total_Invoice_Amount__c- Total_Payments_Received__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>