force-app/main/default/objects/Invoice__c/fields/Invoice_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Auto updated when Invoice is emailed to Receiver</inlineHelpText>
    <label>Invoice Emailed</label>
    <type>Checkbox</type>
</CustomField>