force-app/main/default/objects/Invoice__c/fields/Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Memo__c</fullName>
    <inlineHelpText>Additional information regarding invoice information and contents</inlineHelpText>
    <label>Invoice Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>