force-app/main/default/objects/Invoice__c/fields/Is_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Is_Receiver__c</fullName>
    <formula>Receiver_Name__r.Id = $User.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Receiver</label>
    <type>Checkbox</type>
</CustomField>