force-app/main/default/objects/Invoice__c/fields/Last_Debt_Collection_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Debt_Collection_Attempt__c</fullName>
    <label>Last Debt Collection Attempt</label>
    <type>DateTime</type>
</CustomField>