force-app/main/default/objects/Invoice__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <inlineHelpText>Date payment was last received and recorded.</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>