force-app/main/default/objects/Invoice__c/fields/LateFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>LateFeeAmount__c</fullName>
    <label>Late Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>