force-app/main/default/objects/Invoice__c/fields/Next_Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payable_Date__c</fullName>
    <formula>IF(ISPICKVAL(Collections_Status__c,&apos;Paid in Full&apos;),  Posted_Date__c  + 8 - WEEKDAY( Posted_Date__c ) + 8 - 3, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Payable Date</label>
    <type>Date</type>
</CustomField>