force-app/main/default/objects/Invoice__c/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Designates as Prepaid Invoice and should be eliminated from revenue reporting, debit to cash account and credit to a liability prepayment</inlineHelpText>
    <label>Prepayment</label>
    <type>Checkbox</type>
</CustomField>