force-app/main/default/objects/Invoice__c/fields/Product_Balance__c.field-meta.xml
<CustomField>
    <fullName>Product_Balance__c</fullName>
    <formula>Total_Product_Price__c - Total_Product_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>