force-app/main/default/objects/Invoice__c/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <label>Purchased Date</label>
    <summarizedField>Invoice_Line__c.Purchased_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.InvoiceLine_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>