force-app/main/default/objects/Invoice__c/fields/QB_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Id__c</fullName>
    <label>QB Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>