force-app/main/default/objects/Invoice__c/fields/R_D_Services__c.field-meta.xml
<CustomField>
    <fullName>R_D_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for R&amp;D Related Services Billed to Brand. Products is used to itemized to properly record R&amp;D Expenses.</inlineHelpText>
    <label>R&amp;D Services</label>
    <type>Checkbox</type>
</CustomField>