force-app/main/default/objects/Invoice__c/fields/Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Address__c</fullName>
    <formula>IF(Receiver_Name__r.Billing_Address_Override__c == true, Receiver_Name__r.BillingStreet , Receiver_License__r.License_Address__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Address</label>
    <type>Text</type>
</CustomField>