force-app/main/default/objects/Invoice__c/fields/Receiver_ID__c.field-meta.xml
<CustomField>
    <fullName>Receiver_ID__c</fullName>
    <formula>Receiver_Name__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver ID</label>
    <type>Text</type>
</CustomField>