force-app/main/default/objects/Invoice__c/fields/Receiver_Zone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Zone__c</fullName>
    <formula>TEXT(Receiver_License__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Zone</label>
    <type>Text</type>
</CustomField>