force-app/main/default/objects/Invoice__c/fields/Receiving_Fee__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Fee__c</fullName>
    <label>Receiving Fee</label>
    <summarizedField>Invoice_Line__c.Receiving_Fee__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>