force-app/main/default/objects/Invoice__c/fields/Revenue_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Date__c</fullName>
    <inlineHelpText>Date in which revenue was recognized</inlineHelpText>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>