force-app/main/default/objects/Invoice__c/fields/Ship_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Confirmation_Date__c</fullName>
    <inlineHelpText>Date shipment was delivered to Retail. This is an field is updated by process builder and used in the Purchase Order Invoice Only to determine Supplier Payable Date</inlineHelpText>
    <label>Ship Confirmation Date</label>
    <type>Date</type>
</CustomField>