force-app/main/default/objects/Invoice__c/fields/Sold_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Party__c</fullName>
    <formula>Brand_Quote__r.Receiver_DBA__c</formula>
    <label>Sold To Party</label>
    <type>Text</type>
</CustomField>