force-app/main/default/objects/Invoice__c/fields/Supplier_DBA__c.field-meta.xml
<CustomField>
    <fullName>Supplier_DBA__c</fullName>
    <formula>Supplier_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier DBA</label>
    <type>Text</type>
</CustomField>