force-app/main/default/objects/Invoice__c/fields/Tax_Payment_Validation__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payment_Validation__c</fullName>
    <formula>IF(Total_Excise_Tax_Payments_Received__c &gt; Total_Excise_Tax_Amount__c, &quot;Tax Over Payment&quot;,
IF(Total_Excise_Tax_Payments_Received__c &lt; Total_Excise_Tax_Amount__c, &quot;Tax Under Payment&quot;,Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Payment Validation</label>
    <type>Text</type>
</CustomField>