force-app/main/default/objects/Invoice__c/fields/Total_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Tax__c</fullName>
    <label>Total Cultivation Tax</label>
    <summarizedField>Invoice_Line__c.Subtotal_Cultivation_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.InvoiceLine_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>