force-app/main/default/objects/Invoice__c/fields/Total_Excise_Tax_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Excise_Tax_Payments_Received__c</fullName>
    <description>Calculates total payment amount of EXCISE TAX record type of related receive payment object</description>
    <label>Total Excise Tax Payments Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>