force-app/main/default/objects/Invoice__c/fields/Total_GMV__c.field-meta.xml
<CustomField>
    <fullName>Total_GMV__c</fullName>
    <inlineHelpText>Discounts and Credits Excluded from GMV Roll-up</inlineHelpText>
    <label>Total GMV</label>
    <summarizedField>Invoice_Line__c.Line_Total_Product_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.Retail_Wholesale_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>