force-app/main/default/objects/Invoice__c/fields/Total_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Received__c</fullName>
    <inlineHelpText>Automated roll-up of total payments received from payment records.</inlineHelpText>
    <label>Total Payments Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>